# voxel

./: README.md
.cargo/: config.toml
camera_client/: Cargo.toml
camera_client/assets/shaders/: difference_mask.wgsl
camera_client/src/: lib.rs  main.rs
camera_client/src/module_bindings/: mod.rs  update_voxel_reducer.rs  voxel_grid_table.rs  voxel_grid_type.rs  voxel_type.rs
camera_client/src/plugins/: camera.rs
camera_client/src/resources/: mod.rs
client/: Cargo.toml
client/assets/shaders/: difference_mask.wgsl  processing.wgsl  raymarch.wgsl
client/src/: lib.rs
client/src/module_bindings/: camera_type.rs  identity_connected_reducer.rs  identity_disconnected_reducer.rs  mod.rs  update_voxel_reducer.rs  vec_3_type.rs  voxel_entry_table.rs  voxel_entry_type.rs  voxel_grid_table.rs  voxel_grid_type.rs
client/src/plugins/: camera.rs  connection.rs  mod.rs  processing.rs  test.rs
client/src/resources/: mod.rs
lite_client/: Cargo.toml
lite_client/src/: diff.wgsl  main.rs  ray.wgsl
server/: Cargo.toml
server/src/: lib.rs
viewer/: Cargo.toml
viewer/src/: lib.rs  main.rs
viewer/src/module_bindings/: camera_table.rs  db_vec_3_type.rs  mod.rs  update_camera_data_reducer.rs  update_ray_reducer.rs  voxel_type.rs
viewer/src/plugins/: connection.rs
