[package]
name = "camera_client"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking", "bevy_dev_tools"] }
spacetimedb-sdk = "1.3.0"
hex = "0.4.3"
bevy_spacetimedb = {git = "https://github.com/JulienLavocat/bevy_spacetimedb", branch = "main"}
nokhwa = {version = "0.10.9", features = ["input-native", "output-wgpu"]}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
