
[package]
name = "voxel_viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { git ="https://github.com/bevyengine/bevy", branch = "main", features = ["dynamic_linking", "bevy_dev_tools"] }
spacetimedb-sdk = "1.3.0"
hex = "0.4.3"
bevy_spacetimedb = {git = "https://github.com/cgorto/bevy_spacetimedb", branch = "main"}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

